# fact_extract

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  clear_excel_files.py  commit_message.txt  commit_msg.txt  facts.xlsx  generate_test_pdfs.py  implementation_summary.md  processed_chunks.xlsx  pyproject.toml  requirements.txt  setup.py  technical_architecture.md  test_chunker_node.py  test_duplicate_detection.py  test_excel_storage.py  test_full_pipeline_duplicate.py  test_multiple_facts_per_chunk.py  test_multiple_facts_per_chunk_unique.py  test_synthetic_article_7.py  test_synthetic_article_7_direct.py  test_workflow_step_by_step.py  unprocessed_chunks.xlsx
requirements/: requirements-dev.txt  requirements.txt
src/: __init__.py  __main__.py  add_asyncio_decorator.py  benchmarks.py  config.py  debug_gui_fix.py  debug_imports.py  fix_all_test_imports.py  fix_fact_extract_imports.py  fix_imports.py  fix_main_imports.py  fix_test_imports.py  fix_test_paths.py  llm_config.py  run_gui.py  setup.py  test_chunker.py  test_extraction.py  test_full_pipeline_rejected.py  test_gui_toggle.py  test_quantum.py  test_rejected_facts.py  test_semiconductor.py
src/agents/: __init__.py  verification.py
src/backup_tests/: merge_test_files.py  test_chunker.py  test_extraction.py  test_full_pipeline_rejected.py  test_quantum.py  test_rejected_facts.py  test_semiconductor.py  test_word_chunker.py
src/config/: pyproject.toml  requirements.txt
src/docs/: README.md  implementation_summary.md
src/fact_extract/: __init__.py  (+11 more)
test_output/: test_chunks.xlsx  test_facts.xlsx
(+197 files in other folders)
